# cuda-autocompat

./: .clang-format  .clang-tidy  .gitignore  .iwyu-libstdcxx-extras.imp  .iwyu-mappings.imp  .iwyu-spdlog.imp  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  README.md
.github/actions/changed-files/: action.yml  main.js  package-lock.json  package.json
.github/workflows/: build-and-test.yml  changed-files.yml  ci.yml  codeql.yml  coverity.yml  linters.yml  static-analyzers.yml
cmake/: AutoCompatBuildUtils.cmake  AutoCompatExecWrapper.cmake  AutoCompatTestUtils.cmake
scripts/: override-launcher.sh.in
scripts/ci/: clang-tidy-sarif.sh
scripts/ci/cmake/: autocompat_common.cmake  ci_common.cmake  common.cmake
scripts/ci/gha/: install-dependencies.sh
scripts/ci/github/: annotate-clang-tidy.py  run.sh
scripts/docker/: Dockerfile.ci-ubuntu-latest
src/: CMakeLists.txt
src/examples/: cuda_cuInit.cxx  cudart_cudaSetDevice.cxx
src/ifunc/: libcuda.c
src/rtld-audit/: audit.c
src/search/: init.cxx  main.cxx  parse_args.cxx  search.cxx  search.h
src/utils/: CMakeLists.txt
src/utils/c/: path_utils.c  path_utils.h  search_helper.c  search_helper.h
src/utils/common/: visibility.h
src/utils/cpp/: dl_library.cxx  dl_library.h  logging.cxx  logging.h
src/utils/version/: version.c  version.h.in
tests/: CMakeLists.txt
tests/stubs/: AutoCompatStubUtils.cmake  CMakeLists.txt  cuda_error.c  cuda_error.h  cuda_init.c  cuda_version.c  cudart.c  cudart_driver.c  cudart_error.c  cudart_error.h  cudart_version.c
